--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@ h1{color:grey;font-family:Verdana}
     width:500px;
     padding-left:20px;
     border-radius:25px;
-    align:center
+    margin-right:auto;
+    margin-left:auto;
     }
 
 
